--- a/applications/editors/josm/plugins/seachart/build.xml
+++ b/applications/editors/josm/plugins/seachart/build.xml
@@ -9,7 +9,7 @@
     <property name="plugin.class" value="seachart.Seachart"/>
     <property name="plugin.description" value="Imagery Layer for Sea Charts"/>
     <property name="plugin.icon" value="images/SC.png"/>
-    <property name="plugin.link" value="http://openseamap.org/"/>
+    <property name="plugin.link" value="https://openseamap.org/"/>
 
     <property name="josm" location="../../core/dist/josm-custom.jar"/>
     <property name="plugin.dist.dir" value="../../dist"/>
