--- a/applications/editors/josm/plugins/smed/build.xml
+++ b/applications/editors/josm/plugins/smed/build.xml
@@ -12,7 +12,7 @@
     <property name="plugin.class" value="smed.Smed"/>
     <property name="plugin.description" value="Edit features for OpenSeaMap"/>
     <property name="plugin.icon" value="images/Smed.png"/>
-    <property name="plugin.link" value="http://openseamap.org/"/>
+    <property name="plugin.link" value="https://openseamap.org/"/>
     <property name="plugin.canloadatruntime" value="true"/>
     <!-- ** include targets that all plugins have in common ** -->
     <import file="../build-common.xml"/>                
