--- a/applications/editors/josm/plugins/pt_assistant/build.xml
+++ b/applications/editors/josm/plugins/pt_assistant/build.xml
@@ -3,15 +3,9 @@
 
   <!-- enter the SVN commit message -->
   <property name="commit.message" value="Commit message"/>
-  <!-- enter the *lowest JOSM version this plugin is currently compatible with -->
-  <property name="plugin.main.version" value="13729"/>
 
-  <property name="plugin.author" value="Biswesh Mohapatra biswesh123@gmail.com"/>
-  <property name="plugin.class" value="org.openstreetmap.josm.plugins.pt_assistant.PTAssistantPlugin"/>
-  <property name="plugin.description" value="Provides validation and fixing for public transport route according to version 2 of the public transport schema"/>
-  <property name="plugin.icon" value="..."/>
-  <property name="plugin.link" value="https://wiki.openstreetmap.org/wiki/JOSM/Plugins/PT_Assistant"/>
-  <property name="plugin.canloadatruntime" value="true"/>
+  <!-- edit the properties of this plugin in the file `gradle.properties` -->
+  <property file="${basedir}/gradle.properties"/>
 
   <!-- ** include targets that all plugins have in common ** -->
   <import file="../build-common.xml"/>
