see #josm15560, see #josm16047 - include JAXB, removed in JDK11

--- a/applications/editors/josm/plugins/opendata/build.xml
+++ b/applications/editors/josm/plugins/opendata/build.xml
@@ -88,7 +88,7 @@
         </javac>
     </target>
     
-    <target name="xjc_neptune" depends="init, -jaxb_before9, -jaxb_after9" unless="jaxb.notRequired">
+    <target name="xjc_neptune" depends="init, -jaxb" unless="jaxb.notRequired">
         <exec executable="${xjc}" failonerror="true">
             <arg value="-d"/>
             <arg value="includes"/>
