--- a/applications/editors/josm/plugins/surveyor/build.xml
+++ b/applications/editors/josm/plugins/surveyor/build.xml
@@ -19,16 +19,8 @@
     <property name="plugin.link" value="https://wiki.openstreetmap.org/index.php/JOSM/Plugins/Surveyor"/>
     <property name="plugin.requires" value="livegps"/>
     <property name="plugin.stage" value="60"/>
-	
-    <target name="compile" depends="init">
-        <echo message="compiling sources for ${plugin.jar} ..."/>
-        <javac srcdir="src" debug="true" destdir="${plugin.build.dir}" includeantruntime="false" encoding="UTF-8">
-            <compilerarg value="-Xlint:deprecation"/>
-            <compilerarg value="-Xlint:unchecked"/>
-            <classpath>
-                <pathelement location="${josm}"/>
-                <pathelement location="${livegpsplugin.jar}"/>
-            </classpath>
-        </javac>
-    </target>
+
+	<fileset id="plugin.requires.jars" dir="${plugin.dist.dir}">
+        <include name="livegps.jar"/>
+    </fileset>
 </project>
