--- a/applications/editors/josm/plugins/pdfimport/build.xml
+++ b/applications/editors/josm/plugins/pdfimport/build.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <project name="pdfimport" default="dist" basedir=".">
     <!-- enter the SVN commit message -->
-    <property name="commit.message" value=""/>
+    <property name="commit.message" value="bug fix"/>
     <!-- enter the *lowest* JOSM version this plugin is currently compatible with -->
     <property name="plugin.main.version" value="12678"/>
 	<property name="plugin.canloadatruntime" value="true"/>   
