--- a/applications/editors/josm/plugins/buildings_tools/build.xml
+++ b/applications/editors/josm/plugins/buildings_tools/build.xml
@@ -9,7 +9,7 @@
          See https://josm.openstreetmap.de/wiki/DevelopersGuide/DevelopingPlugins
     -->
     <property name="plugin.author" value="Upliner"/>
-    <property name="plugin.class" value="buildings_tools.BuildingsToolsPlugin"/>
+    <property name="plugin.class" value="org.openstreetmap.josm.plugins.buildings_tools.BuildingsToolsPlugin"/>
     <property name="plugin.description" value="Tools for drawing buildings."/>
     <property name="plugin.icon" value="images/mapmode/building.png"/>
     <property name="plugin.link" value="https://wiki.openstreetmap.org/wiki/JOSM/Plugins/BuildingsTools"/>
