--- a/applications/editors/josm/plugins/cadastre-fr/.gitignore
+++ b/applications/editors/josm/plugins/cadastre-fr/.gitignore
@@ -1,7 +1,8 @@
-/build.log
-/build.err
-/build
 /bin
+/bintest
+/build
+/build.err
+/build.log
 /checkstyle-josm-cadastre-fr.xml
 /findbugs-josm-cadastre-fr.xml
 /javadoc
