--- a/applications/editors/josm/plugins/ImportImagePlugin/.gitignore
+++ b/applications/editors/josm/plugins/ImportImagePlugin/.gitignore
@@ -1,6 +1,7 @@
-/build
 /bin
+/bintest
+/build
 /checkstyle-josm-ImportImagePlugin.xml
 /findbugs-josm-ImportImagePlugin.xml
-/spotbugs-josm-ImportImagePlugin.xml
 /javadoc
+/spotbugs-josm-ImportImagePlugin.xml
