rename package, fix warning

--- a/applications/editors/josm/plugins/simplifyarea/build.xml
+++ b/applications/editors/josm/plugins/simplifyarea/build.xml
@@ -9,7 +9,7 @@
          See https://josm.openstreetmap.de/wiki/DevelopersGuide/DevelopingPlugins
     -->
     <property name="plugin.author" value="Martin Ždila &lt;m.zdila@gmail.com&gt;"/>
-    <property name="plugin.class" value="sk.zdila.josm.plugin.simplify.SimplifyAreaPlugin"/>
+    <property name="plugin.class" value="org.openstreetmap.josm.plugins.simplifyarea.SimplifyAreaPlugin"/>
     <property name="plugin.description" value="Simplify area by removing nodes on very obtuse angles. This can be constrained by maximum removed area size. Also average nearby nodes."/>
     <property name="plugin.icon" value="images/preferences/simplifyArea.png"/>
     <property name="plugin.link" value="https://wiki.openstreetmap.org/wiki/JOSM/Plugins/SimplifyArea"/>
