--- a/applications/editors/josm/plugins/javafx/.project
+++ b/applications/editors/josm/plugins/javafx/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>JOSM-openjfx</name>
+	<name>JOSM-javafx</name>
 	<comment></comment>
 	<projects>
 	</projects>
