--- a/applications/editors/josm/plugins/piclayer/.project
+++ b/applications/editors/josm/plugins/piclayer/.project
@@ -1,8 +1,10 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>JOSM-piclayer</name>
+	<name>piclayer</name>
 	<comment></comment>
 	<projects>
+		<project>JOSM</project>
+		<project>JOSM-indoorhelper</project>
 	</projects>
 	<buildSpec>
 		<buildCommand>
@@ -10,19 +12,8 @@
 			<arguments>
 			</arguments>
 		</buildCommand>
-		<buildCommand>
-			<name>org.sonarlint.eclipse.core.sonarlintBuilder</name>
-			<arguments>
-			</arguments>
-		</buildCommand>
-		<buildCommand>
-			<name>net.sf.eclipsecs.core.CheckstyleBuilder</name>
-			<arguments>
-			</arguments>
-		</buildCommand>
 	</buildSpec>
 	<natures>
 		<nature>org.eclipse.jdt.core.javanature</nature>
-		<nature>net.sf.eclipsecs.core.CheckstyleNature</nature>
 	</natures>
 </projectDescription>
