refactoring, new tags, consider/display existing tags

--- a/applications/editors/josm/plugins/HouseNumberTaggingTool/.gitignore
+++ b/applications/editors/josm/plugins/HouseNumberTaggingTool/.gitignore
@@ -5,3 +5,5 @@
 /findbugs-josm-HouseNumberTaggingTool.xml
 /spotbugs-josm-HouseNumberTaggingTool.xml
 /javadoc
+/.idea
+/JOSM-HouseNumberTaggingTool.iml
